# cosmo

./: .gitignore  CMakeLists.txt  Dockerfile  FrameBuffer.cc  Makefile  PortIO.h  README.md  SerialPort.cc  bochsrc.txt  doxygen_conf.txt  framebuffer.cc  framebuffer.h  framebuffer_asm.s  kmain.c  kmain.cc  link.ld  loader.s
cmake/: i686-elf-gcc.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/Boot/: multiboot.h
include/FrameBuffer/: FrameBuffer.h
include/GlobalDescriptorTable/: FlushGDT.h  GlobalDescriptorTable.h
include/InterruptDescriptorTable/: FlushIDT.h  InterruptDescriptorTable.h  InterruptHandler.h
include/InterruptDescriptorTable/IRQ/Keyboard/: KeyboardIrq.h
include/Logger/: Logger.h
include/PortIO/: PortIO.h
include/ProgrammableInterruptController/: ProgrammableInterruptController.h
include/SerialPort/: SerialPort.h
include/VirtualMemoryMgmt/PhysicalFrameAllocator/: PhysicalFrameAllocator.h
iso/boot/: kernel.elf
iso/boot/grub/: grub.cfg  menu.lst
kernel/: CMakeLists.txt  kmain.cc  link.ld  loader.nasm
scripts/: bochsrc.txt  build.sh  build_cosmo.sh  clean.sh  clean_project.sh  config_cosmo.sh  create_container.sh  dev.sh  generate_iso.sh  run.sh  run_cosmo.sh  setup_tool_chain.sh
src/: CMakeLists.txt
src/FrameBuffer/: CMakeLists.txt  FrameBuffer.cc
src/GlobalDescriptorTable/: CMakeLists.txt  FlushGDT.nasm
src/InterruptDescriptorTable/: CMakeLists.txt  FlushIDT.nasm  InterruptDescriptorTable.cc  InterruptHandler.cc  InterruptHandler.nasm
src/InterruptDescriptorTable/IRQ/Keyboard/: KeyboardIrq.cc
src/Logger/: CMakeLists.txt  Logger.cc
src/PortIO/: CMakeLists.txt  PortIO.cc  PortIO.nasm
src/ProgrammableInterruptController/: CMakeLists.txt  ProgrammableInterruptController.cc
src/SerialPort/: CMakeLists.txt  SerialPort.cc
src/VirtualMemoryMgmt/: CMakeLists.txt
src/VirtualMemoryMgmt/PhysicalFrameAllocator/: CMakeLists.txt  PhysicalFrameAllocator.cc
src/libc/: CMakeLists.txt
src/libc/stdio/: putchar.c
